@@ -379,6 +379,21 @@ class MySQLAdapter(Adapter):
         """
         cursor.execute(stmt, (prev_tid, md5sum, MySQLdb.Binary(data), oid))
 
+    def restore(self, cursor, oid, tid, md5sum, data):
+        """Store an object directly, without conflict detection.
+
+        Used for copying transactions into this database.
+        """
+        stmt = """
+        INSERT INTO object_state (zoid, tid, prev_tid, md5, state)
+        VALUES (%s, %s,
+            COALESCE((SELECT tid FROM current_object WHERE zoid = %s), 0),
+            %s, %s)
+        """
+        if data is not None:
+            data = MySQLdb.Binary(data)
+        cursor.execute(stmt, (oid, tid, oid, md5sum, data))
+
     def start_commit(self, cursor):
         """Prepare to commit."""
         # Hold commit_lock to prevent concurrent commits.
@@ -411,15 +426,16 @@ class MySQLAdapter(Adapter):
             timestamp = now
         return tid, timestamp
 
-    def add_transaction(self, cursor, tid, username, description, extension):
+    def add_transaction(self, cursor, tid, username, description, extension,
+            packed=False):
         """Add a transaction."""
         stmt = """
         INSERT INTO transaction
-            (tid, username, description, extension)
-        VALUES (%s, %s, %s, %s)
+            (tid, packed, username, description, extension)
+        VALUES (%s, %s, %s, %s, %s)
         """
         cursor.execute(stmt, (
-            tid, username, description, MySQLdb.Binary(extension)))
+            tid, packed, username, description, MySQLdb.Binary(extension)))
 
     def detect_conflict(self, cursor):
         """Find one conflict in the data about to be committed.
