@@ -17,15 +17,18 @@ import unittest
 from relstorage.relstorage import RelStorage
 
 from ZODB.DB import DB
+from ZODB.utils import p64
+from ZODB.FileStorage import FileStorage
 from persistent.mapping import PersistentMapping
 import transaction
 
 from ZODB.tests import StorageTestBase, BasicStorage, \
      TransactionalUndoStorage, PackableStorage, \
      Synchronization, ConflictResolution, HistoryStorage, \
-     RevisionStorage, PersistentStorage, \
-     MTStorage, ReadOnlyStorage
+     IteratorStorage, RevisionStorage, PersistentStorage, \
+     MTStorage, ReadOnlyStorage, RecoveryStorage
 
+from ZODB.tests.MinPO import MinPO
 from ZODB.tests.StorageTestBase import zodb_unpickle, zodb_pickle
 
 
@@ -58,6 +61,8 @@ class RelStorageTests(
     Synchronization.SynchronizedStorage,
     ConflictResolution.ConflictResolvingStorage,
     HistoryStorage.HistoryStorage,
+    IteratorStorage.IteratorStorage,
+    IteratorStorage.ExtendedIteratorStorage,
     PersistentStorage.PersistentStorage,
     MTStorage.MTStorage,
     ReadOnlyStorage.ReadOnlyStorage
@@ -260,3 +265,178 @@ class RelStorageTests(
 
         finally:
             db.close()
+
+
+    def checkTransactionalUndoIterator(self):
+        # this test overrides the broken version in TransactionalUndoStorage.
+
+        s = self._storage
+
+        BATCHES = 4
+        OBJECTS = 4
+
+        orig = []
+        for i in range(BATCHES):
+            t = transaction.Transaction()
+            tid = p64(i + 1)
+            s.tpc_begin(t, tid)
+            txn_orig = []
+            for j in range(OBJECTS):
+                oid = s.new_oid()
+                obj = MinPO(i * OBJECTS + j)
+                revid = s.store(oid, None, zodb_pickle(obj), '', t)
+                txn_orig.append((tid, oid, revid))
+            serials = s.tpc_vote(t)
+            if not serials:
+                orig.extend(txn_orig)
+            else:
+                # The storage provided revision IDs after the vote
+                serials = dict(serials)
+                for tid, oid, revid in txn_orig:
+                    self.assertEqual(revid, None)
+                    orig.append((tid, oid, serials[oid]))
+            s.tpc_finish(t)
+
+        i = 0
+        for tid, oid, revid in orig:
+            self._dostore(oid, revid=revid, data=MinPO(revid),
+                          description="update %s" % i)
+
+        # Undo the OBJECTS transactions that modified objects created
+        # in the ith original transaction.
+
+        def undo(i):
+            info = s.undoInfo()
+            t = transaction.Transaction()
+            s.tpc_begin(t)
+            base = i * OBJECTS + i
+            for j in range(OBJECTS):
+                tid = info[base + j]['id']
+                s.undo(tid, t)
+            s.tpc_vote(t)
+            s.tpc_finish(t)
+
+        for i in range(BATCHES):
+            undo(i)
+
+        # There are now (2 + OBJECTS) * BATCHES transactions:
+        #     BATCHES original transactions, followed by
+        #     OBJECTS * BATCHES modifications, followed by
+        #     BATCHES undos
+
+        iter = s.iterator()
+        offset = 0
+
+        eq = self.assertEqual
+
+        for i in range(BATCHES):
+            txn = iter[offset]
+            offset += 1
+
+            tid = p64(i + 1)
+            eq(txn.tid, tid)
+
+            L1 = [(rec.oid, rec.tid, rec.data_txn) for rec in txn]
+            L2 = [(oid, revid, None) for _tid, oid, revid in orig
+                  if _tid == tid]
+
+            eq(L1, L2)
+
+        for i in range(BATCHES * OBJECTS):
+            txn = iter[offset]
+            offset += 1
+            eq(len([rec for rec in txn if rec.data_txn is None]), 1)
+
+        for i in range(BATCHES):
+            txn = iter[offset]
+            offset += 1
+
+            # The undos are performed in reverse order.
+            otid = p64(BATCHES - i)
+            L1 = [rec.oid for rec in txn]
+            L2 = [oid for _tid, oid, revid in orig if _tid == otid]
+            L1.sort()
+            L2.sort()
+            eq(L1, L2)
+
+        self.assertRaises(IndexError, iter.__getitem__, offset)
+
+
+class IteratorDeepCompareUnordered:
+    # Like IteratorDeepCompare, but compensates for OID order
+    # differences in transactions.
+    def compare(self, storage1, storage2):
+        eq = self.assertEqual
+        iter1 = storage1.iterator()
+        iter2 = storage2.iterator()
+        for txn1, txn2 in zip(iter1, iter2):
+            eq(txn1.tid,         txn2.tid)
+            eq(txn1.status,      txn2.status)
+            eq(txn1.user,        txn2.user)
+            eq(txn1.description, txn2.description)
+            eq(txn1._extension,  txn2._extension)
+            recs1 = [(r.oid, r) for r in txn1]
+            recs1.sort()
+            recs2 = [(r.oid, r) for r in txn2]
+            recs2.sort()
+            for (oid1, rec1), (oid2, rec2) in zip(recs1, recs2):
+                eq(rec1.oid,     rec2.oid)
+                eq(rec1.tid,  rec2.tid)
+                eq(rec1.version, rec2.version)
+                eq(rec1.data,    rec2.data)
+            # Make sure there are no more records left in rec1 and rec2,
+            # meaning they were the same length.
+            self.assertRaises(IndexError, txn1.next)
+            self.assertRaises(IndexError, txn2.next)
+        # Make sure ther are no more records left in txn1 and txn2, meaning
+        # they were the same length
+        self.assertRaises(IndexError, iter1.next)
+        self.assertRaises(IndexError, iter2.next)
+        iter1.close()
+        iter2.close()
+
+
+
+class RecoveryStorageSubset(IteratorDeepCompareUnordered):
+    # The subset of RecoveryStorage tests that do not rely on version
+    # support.
+    pass
+
+for name, attr in RecoveryStorage.RecoveryStorage.__dict__.items():
+    if 'check' in name and 'Version' not in name:
+        setattr(RecoveryStorageSubset, name, attr)
+
+
+class ToFileStorage(BaseRelStorageTests, RecoveryStorageSubset):
+    def setUp(self):
+        self.open(create=1)
+        self._storage._zap()
+        self._dst = FileStorage("Dest.fs", create=True)
+
+    def tearDown(self):
+        self._storage.close()
+        self._dst.close()
+        self._storage.cleanup()
+        self._dst.cleanup()
+
+    def new_dest(self):
+        return FileStorage('Dest.fs')
+
+
+class FromFileStorage(BaseRelStorageTests, RecoveryStorageSubset):
+    def setUp(self):
+        self.open(create=1)
+        self._storage._zap()
+        self._dst = self._storage
+        self._storage = FileStorage("Source.fs", create=True)
+
+    def tearDown(self):
+        self._storage.close()
+        self._dst.close()
+        self._storage.cleanup()
+        self._dst.cleanup()
+
+    def new_dest(self):
+        return self._dst
+
+
